nivasa-macros/tests/trybuild/module_doc_interceptor_invalid.stderr
error: invalid module interceptor marker
 --> tests/trybuild/module_doc_interceptor_invalid.rs:3:1
  |
3 | /// __NIVASA_INTERCEPTOR__ , ,
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
