nivasa-macros/tests/trybuild/module_doc_interceptor_invalid.rs
use nivasa_macros::module;

/// __NIVASA_INTERCEPTOR__ , ,
#[module({})]
struct AppModule;

fn main() {}
